--- a/src/home/home.html
+++ b/src/home/home.html
@@ -5,6 +5,27 @@
     <title>Title</title>
 </head>
 <body>
-
+<div id="hero">
+    {{hero_name}} is big hero!
+    <h3>hero_inf</h3>
+    <ul>
+        <li>name: <span :c-text="hero_name"></span></li>
+        <li>age: <span :c-text="age"></span></li>
+    </ul>
+    updateHeroName: <input type="text" :c-value="hero_name">
+    updateHeroAge: <input type="text" :c-value="age">
+</div>
+<hr>
+<!--ignore scope-->
+<div id="hero2">
+    {{hero_name}} is big hero!
+    <h3>hero_inf</h3>
+    <ul>
+        <li>name: <span :c-text="hero_name"></span></li>
+        <li>age: <span :c-text="age"></span></li>
+    </ul>
+    updateHeroName: <input type="text" :c-value="hero_name">
+    updateHeroAge: <input type="text" :c-value="age">
+</div>
 </body>
 </html>
